--- a/.github/workflows/main_hf-front-diego-arciniegas-dev.yml
+++ b/.github/workflows/main_hf-front-diego-arciniegas-dev.yml
@@ -19,25 +19,35 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
 
       - name: npm install, build, and test
+        env:
+          REACT_APP_URL_API: ${{ vars.REACT_APP_URL_API }}
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+          copy ./web.config ./dist
+
+      # Zip the build directory
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          filename: release.zip
+          path: ./dist/*
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -47,7 +57,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
-      
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -55,11 +65,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_56E473AF4E0446FD8ADB565AF3F3D2D5 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1AC8B179828E4BD8B3EFCECA66DA03DC }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'hf-front-diego-arciniegas-dev'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: "prueba-tecnica-socio"
+          slot-name: "Production"
+          package: release.zip
