--- a/.github/workflows/main_hf-front-diego-arciniegas-dev.yml
+++ b/.github/workflows/main_hf-front-diego-arciniegas-dev.yml
@@ -28,14 +28,14 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          copy ./web.config ./dist
+          copy ./web.config ./build
 
       # Zip the build directory
       - name: Zip Release
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: ./dist/*
+          path: ./build/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
